--- a/package.json
+++ b/package.json
@@ -16,27 +16,46 @@
 		"@emotion/react": "^11.8.2",
 		"@loadable/component": "^5.15.2",
 		"@mantine/core": "^4.1.1",
+		"@mantine/form": "^4.1.2",
 		"@mantine/hooks": "^4.1.1",
 		"@mantine/prism": "^4.1.1",
 		"@mantine/ssr": "^4.1.1",
+		"@vscode/sqlite3": "^5.0.8",
+		"axios": "^0.26.1",
 		"emotion-reset": "^3.0.1",
 		"esbuild": "^0.14.30",
 		"fastify": "^3.27.4",
+		"fastify-openid-client": "^2.1.0",
+		"fastify-passport": "^0.5.0",
 		"fastify-static": "^4.6.1",
+		"fastify-websocket": "^4.2.1",
 		"fs-extra": "^10.0.1",
+		"mariadb": "^3.0.0",
+		"mysql2": "^2.3.3",
 		"p-min-delay": "^4.0.1",
+		"pg": "^8.7.3",
+		"pg-hstore": "^2.3.4",
+		"prettier-plugin-organize-imports": "^2.3.4",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"sequelize": "^6.18.0",
+		"swr": "^1.2.2",
+		"tedious": "^14.4.0",
+		"umzug": "^3.1.1",
+		"ws": "^8.5.0"
 	},
 	"devDependencies": {
 		"@types/fs-extra": "^9.0.13",
 		"@types/loadable__component": "^5.13.4",
 		"@types/node": "^17.0.23",
+		"@types/oidc-provider": "^7.8.2",
 		"@types/p-min-delay": "^3.0.0",
 		"@types/react": "^17.0.43",
 		"@types/react-dom": "^17.0.14",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/umzug": "^2.3.3",
+		"@types/ws": "^8.5.3",
 		"cross-env": "^7.0.3",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.6.3"
