--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,18 @@
 {
-	"editor.formatOnSave": true,
-	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"files.exclude": {
-		"**/node_modules": false
-	},
-	"macros.list": {
-		"license": [
-			{
-				"command": "type",
-				"args": {
-					"text": "/* This Source Code Form is subject to the terms of the Mozilla Public\n * License, v. 2.0. If a copy of the MPL was not distributed with this\n* file, You can obtain one at http://mozilla.org/MPL/2.0/. */\n\n"
-				}
-			},
-			"insertSnippet"
-		]
-	}
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "files.exclude": {
+    "**/node_modules": true
+  },
+  "macros.list": {
+    "license": [
+      {
+        "command": "type",
+        "args": {
+          "text": "/* This Source Code Form is subject to the terms of the Mozilla Public\n * License, v. 2.0. If a copy of the MPL was not distributed with this\n* file, You can obtain one at http://mozilla.org/MPL/2.0/. */\n\n"
+        }
+      },
+      "insertSnippet"
+    ]
+  }
 }
