--- a/package.json
+++ b/package.json
@@ -1,63 +1,37 @@
 {
-	"name": "convoy",
-	"version": "0.0.0",
-	"main": "src/index.ts",
-	"repository": "https://github.com/dothq/convoy",
-	"author": "Dot HQ <contact@dothq.co>",
-	"license": "MPL-2.0",
-	"private": true,
-	"scripts": {
-		"build": "node scripts/build.mjs",
-		"build:prod": "cross-env NODE_ENV=prod yarn run build",
-		"build:dev": "cross-env NODE_ENV=dev yarn run build",
-		"dev": "yarn run build:dev && node dist/server.js"
-	},
-	"dependencies": {
-		"@emotion/react": "^11.8.2",
-		"@loadable/component": "^5.15.2",
-		"@mantine/core": "^4.1.1",
-		"@mantine/form": "^4.1.2",
-		"@mantine/hooks": "^4.1.1",
-		"@mantine/prism": "^4.1.1",
-		"@mantine/ssr": "^4.1.1",
-		"@vscode/sqlite3": "^5.0.8",
-		"axios": "^0.26.1",
-		"emotion-reset": "^3.0.1",
-		"esbuild": "^0.14.30",
-		"fastify": "^3.27.4",
-		"fastify-openid-client": "^2.1.0",
-		"fastify-passport": "^0.5.0",
-		"fastify-static": "^4.6.1",
-		"fastify-websocket": "^4.2.1",
-		"fs-extra": "^10.0.1",
-		"mariadb": "^3.0.0",
-		"mysql2": "^2.3.3",
-		"p-min-delay": "^4.0.1",
-		"pg": "^8.7.3",
-		"pg-hstore": "^2.3.4",
-		"prettier-plugin-organize-imports": "^2.3.4",
-		"react": "^18.0.0",
-		"react-dom": "^18.0.0",
-		"react-router-dom": "^6.3.0",
-		"sequelize": "^6.18.0",
-		"swr": "^1.2.2",
-		"tedious": "^14.4.0",
-		"umzug": "^3.1.1",
-		"ws": "^8.5.0"
-	},
-	"devDependencies": {
-		"@types/fs-extra": "^9.0.13",
-		"@types/loadable__component": "^5.13.4",
-		"@types/node": "^17.0.23",
-		"@types/oidc-provider": "^7.8.2",
-		"@types/p-min-delay": "^3.0.0",
-		"@types/react": "^17.0.43",
-		"@types/react-dom": "^17.0.14",
-		"@types/react-router-dom": "^5.3.3",
-		"@types/umzug": "^2.3.3",
-		"@types/ws": "^8.5.3",
-		"cross-env": "^7.0.3",
-		"rimraf": "^3.0.2",
-		"typescript": "^4.6.3"
-	}
+    "name": "hyphen",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 9000",
+        "build": "next build",
+        "start": "next start -p 9000",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@cliqz/adblocker-puppeteer": "^1.23.7",
+        "@emotion/cache": "^11.7.1",
+        "@emotion/css": "^11.9.0",
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@fdn-ui/icons-react": "^0.0.11",
+        "@radix-ui/react-popover": "^0.1.6",
+        "chrome-aws-lambda": "^10.1.0",
+        "cross-fetch": "^3.1.5",
+        "emotion-reset": "^3.0.1",
+        "next": "12.1.4",
+        "nookies": "^2.5.2",
+        "puppeteer": "^13.5.2",
+        "react": "18.0.0",
+        "react-dom": "18.0.0"
+    },
+    "devDependencies": {
+        "@types/cookie": "^0.4.1",
+        "@types/node": "17.0.23",
+        "@types/react": "18.0.0",
+        "@types/react-dom": "18.0.0",
+        "prettier": "^2.6.2",
+        "prettier-plugin-organize-imports": "^2.3.4",
+        "typescript": "4.6.3"
+    }
 }
