--- a/package.json
+++ b/package.json
@@ -1,43 +1,10 @@
 {
     "name": "hyphen",
-    "version": "0.1.0",
+    "version": "0.0.0",
+    "description": "The open-source Vercel and Netlify replacement.",
+    "license": "MPL-2.0",
     "private": true,
     "workspaces": [
-        "cli"
-    ],
-    "scripts": {
-        "dev": "node scripts/symlink-api.js && next dev -p 9000",
-        "build": "node scripts/symlink-api.js && next build",
-        "start": "node scripts/symlink-api.js && next start -p 9000",
-        "lint": "node scripts/symlink-api.js && next lint"
-    },
-    "dependencies": {
-        "@cliqz/adblocker-puppeteer": "^1.23.7",
-        "@emotion/cache": "^11.7.1",
-        "@emotion/css": "^11.9.0",
-        "@emotion/react": "^11.9.0",
-        "@emotion/server": "^11.4.0",
-        "@emotion/styled": "^11.8.1",
-        "@fdn-ui/icons-react": "^0.0.11",
-        "@radix-ui/react-popover": "^0.1.6",
-        "chrome-aws-lambda": "^10.1.0",
-        "cross-fetch": "^3.1.5",
-        "emotion-reset": "^3.0.1",
-        "next": "12.1.4",
-        "nookies": "^2.5.2",
-        "puppeteer": "^13.5.2",
-        "react": "18.0.0",
-        "react-dom": "18.0.0",
-        "react-loading-skeleton": "^3.1.0"
-    },
-    "devDependencies": {
-        "@types/cookie": "^0.4.1",
-        "@types/node": "17.0.23",
-        "@types/react": "18.0.0",
-        "@types/react-dom": "18.0.0",
-        "prettier": "^2.6.2",
-        "prettier-plugin-organize-imports": "^2.3.4",
-        "rimraf": "^3.0.2",
-        "typescript": "4.6.3"
-    }
+        "src/**"
+    ]
 }
