--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# Hide Next.JS API routes
+src/app/pages/api
