🙈 Hide out and .next directories

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
 	},
 	"files.exclude": {
 		"**/node_modules": true,
-		"**/pages/api": true
+		"**/pages/api": true,
+		"**/out": true,
+		"**/.next": true
 	},
 	"macros.list": {
 		"license": [
