--- a/src/api/package.json
+++ b/src/api/package.json
@@ -7,5 +7,9 @@
         "chrome-aws-lambda": "^10.1.0",
         "cross-fetch": "^3.1.5",
         "puppeteer": "^13.5.2"
+    },
+    "devDependencies": {
+        "@types/next": "^9.0.0",
+        "@types/node": "^17.0.24"
     }
 }
