--- a/src/cli/package.json
+++ b/src/cli/package.json
@@ -15,6 +15,7 @@
     "license": "MPL-2.0",
     "dependencies": {
         "ajv": "^8.11.0",
+        "axios": "^0.26.1",
         "chalk": "^5.0.1",
         "commander": "^9.1.0",
         "fs-extra": "^10.0.1",
