--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,12 +4,18 @@
     "description": "Hyphen API",
     "dependencies": {
         "@cliqz/adblocker-puppeteer": "^1.23.7",
+        "@hyphen/util": "*",
         "chrome-aws-lambda": "^10.1.0",
         "cross-fetch": "^3.1.5",
-        "puppeteer": "^13.5.2"
+        "formidable": "^2.0.1",
+        "next-connect": "^0.12.2",
+        "puppeteer": "^13.5.2",
+        "rimraf": "^3.0.2"
     },
     "devDependencies": {
+        "@types/formidable": "^2.0.4",
         "@types/next": "^9.0.0",
-        "@types/node": "^17.0.24"
+        "@types/node": "^17.0.24",
+        "@types/rimraf": "^3.0.2"
     }
 }
